projects/tpdsl-code/code/interp/tree/PieParser.java
/***
 * Excerpted from "Language Implementation Patterns",
 * published by The Pragmatic Bookshelf.
 * Copyrights apply to this code. It may not be used to create training material, 
 * courses, books, articles, and the like. Contact us if you are in doubt.
 * We make no guarantees that this code is fit for any purpose. 
 * Visit http://www.pragmaticprogrammer.com/titles/tpdsl for more book information.
***/
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g 2009-09-23 17:37:44

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/** A simple dynamically-typed language that smacks of Python.
 *  This builds a tree, then we'll interpret it with a tree grammar
 *  Build a convential symbol table while parsing.  Save
 *  symbol ptrs in AST nodes.
 */
public class PieParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGS", "FIELDS", "BLOCK", "CALL", "IF", "ASSIGN", "PRINT", "WHILE", "RETURN", "DEF", "ADD", "SUB", "MUL", "EQ", "LT", "STRUCT", "DOT", "NEW", "ID", "NL", "INT", "CHAR", "FLOAT", "STRING", "LETTER", "WS", "SL_COMMENT", "'{'", "','", "'}'", "'('", "')'", "':'", "'else'"
    };
    public static final int LETTER=28;
    public static final int T__35=35;
    public static final int ARGS=4;
    public static final int DEF=13;
    public static final int T__36=36;
    public static final int WHILE=11;
    public static final int WS=29;
    public static final int CHAR=25;
    public static final int STRING=27;
    public static final int NEW=21;
    public static final int EQ=17;
    public static final int FLOAT=26;
    public static final int LT=18;
    public static final int T__33=33;
    public static final int DOT=20;
    public static final int BLOCK=6;
    public static final int MUL=16;
    public static final int NL=23;
    public static final int PRINT=10;
    public static final int RETURN=12;
    public static final int INT=24;
    public static final int T__31=31;
    public static final int IF=8;
    public static final int EOF=-1;
    public static final int STRUCT=19;
    public static final int T__32=32;
    public static final int ASSIGN=9;
    public static final int CALL=7;
    public static final int T__37=37;
    public static final int SUB=15;
    public static final int T__34=34;
    public static final int SL_COMMENT=30;
    public static final int ADD=14;
    public static final int ID=22;
    public static final int FIELDS=5;

    // delegates
    // delegators


        public PieParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PieParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PieParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g"; }


        Interpreter interp;
        Scope currentScope;
        public PieParser(TokenStream input, Interpreter interp) {
            this(input);
            this.interp = interp;
            currentScope = interp.globalScope;
        }


    public static class program_return extends ParserRuleReturnScope {
        PieAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:25:1: program : ( functionDefinition | statement )+ EOF -> ^( BLOCK ( statement )+ ) ;
    public final PieParser.program_return program() throws RecognitionException {
        PieParser.program_return retval = new PieParser.program_return();
        retval.start = input.LT(1);

        PieAST root_0 = null;

        Token EOF3=null;
        PieParser.functionDefinition_return functionDefinition1 = null;

        PieParser.statement_return statement2 = null;


        PieAST EOF3_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_functionDefinition=new RewriteRuleSubtreeStream(adaptor,"rule functionDefinition");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:26:2: ( ( functionDefinition | statement )+ EOF -> ^( BLOCK ( statement )+ ) )
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:26:4: ( functionDefinition | statement )+ EOF
            {
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:26:4: ( functionDefinition | statement )+
            int cnt1=0;
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DEF) ) {
                    alt1=1;
                }
                else if ( (LA1_0==IF||(LA1_0>=PRINT && LA1_0<=RETURN)||LA1_0==STRUCT||(LA1_0>=ID && LA1_0<=NL)) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:26:6: functionDefinition
            	    {
            	    pushFollow(FOLLOW_functionDefinition_in_program124);
            	    functionDefinition1=functionDefinition();

            	    state._fsp--;

            	    stream_functionDefinition.add(functionDefinition1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:26:27: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program128);
            	    statement2=statement();

            	    state._fsp--;

            	    stream_statement.add(statement2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_program133);  
            stream_EOF.add(EOF3);



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (PieAST)adaptor.nil();
            // 27:3: -> ^( BLOCK ( statement )+ )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:27:6: ^( BLOCK ( statement )+ )
                {
                PieAST root_1 = (PieAST)adaptor.nil();
                root_1 = (PieAST)adaptor.becomeRoot((PieAST)adaptor.create(BLOCK, "BLOCK"), root_1);

                if ( !(stream_statement.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (PieAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PieAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class structDefinition_return extends ParserRuleReturnScope {
        PieAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "structDefinition"
    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:30:1: structDefinition : 'struct' name= ID '{' vardef ( ',' vardef )* '}' NL ->;
    public final PieParser.structDefinition_return structDefinition() throws RecognitionException {
        PieParser.structDefinition_return retval = new PieParser.structDefinition_return();
        retval.start = input.LT(1);

        PieAST root_0 = null;

        Token name=null;
        Token string_literal4=null;
        Token char_literal5=null;
        Token char_literal7=null;
        Token char_literal9=null;
        Token NL10=null;
        PieParser.vardef_return vardef6 = null;

        PieParser.vardef_return vardef8 = null;


        PieAST name_tree=null;
        PieAST string_literal4_tree=null;
        PieAST char_literal5_tree=null;
        PieAST char_literal7_tree=null;
        PieAST char_literal9_tree=null;
        PieAST NL10_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_STRUCT=new RewriteRuleTokenStream(adaptor,"token STRUCT");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_vardef=new RewriteRuleSubtreeStream(adaptor,"rule vardef");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:31:5: ( 'struct' name= ID '{' vardef ( ',' vardef )* '}' NL ->)
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:31:9: 'struct' name= ID '{' vardef ( ',' vardef )* '}' NL
            {
            string_literal4=(Token)match(input,STRUCT,FOLLOW_STRUCT_in_structDefinition162);  
            stream_STRUCT.add(string_literal4);

            name=(Token)match(input,ID,FOLLOW_ID_in_structDefinition166);  
            stream_ID.add(name);

            char_literal5=(Token)match(input,31,FOLLOW_31_in_structDefinition168);  
            stream_31.add(char_literal5);


                	StructSymbol ss = new StructSymbol((name!=null?name.getText():null), currentScope);
                    currentScope.define(ss); // def struct in current scope
                    currentScope = ss;       // set current scope to struct scope
            		
            pushFollow(FOLLOW_vardef_in_structDefinition180);
            vardef6=vardef();

            state._fsp--;

            stream_vardef.add(vardef6.getTree());
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:37:10: ( ',' vardef )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==32) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:37:11: ',' vardef
            	    {
            	    char_literal7=(Token)match(input,32,FOLLOW_32_in_structDefinition183);  
            	    stream_32.add(char_literal7);

            	    pushFollow(FOLLOW_vardef_in_structDefinition185);
            	    vardef8=vardef();

            	    state._fsp--;

            	    stream_vardef.add(vardef8.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            char_literal9=(Token)match(input,33,FOLLOW_33_in_structDefinition189);  
            stream_33.add(char_literal9);

            NL10=(Token)match(input,NL,FOLLOW_NL_in_structDefinition191);  
            stream_NL.add(NL10);

            currentScope = currentScope.getEnclosingScope();


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (PieAST)adaptor.nil();
            // 39:3: ->
            {
                root_0 = null;
            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (PieAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PieAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "structDefinition"

    public static class functionDefinition_return extends ParserRuleReturnScope {
        PieAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "functionDefinition"
    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:42:1: functionDefinition : 'def' ID '(' ( vardef ( ',' vardef )* )? ')' slist ->;
    public final PieParser.functionDefinition_return functionDefinition() throws RecognitionException {
        PieParser.functionDefinition_return retval = new PieParser.functionDefinition_return();
        retval.start = input.LT(1);

        PieAST root_0 = null;

        Token string_literal11=null;
        Token ID12=null;
        Token char_literal13=null;
        Token char_literal15=null;
        Token char_literal17=null;
        PieParser.vardef_return vardef14 = null;

        PieParser.vardef_return vardef16 = null;

        PieParser.slist_return slist18 = null;


        PieAST string_literal11_tree=null;
        PieAST ID12_tree=null;
        PieAST char_literal13_tree=null;
        PieAST char_literal15_tree=null;
        PieAST char_literal17_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_DEF=new RewriteRuleTokenStream(adaptor,"token DEF");
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_vardef=new RewriteRuleSubtreeStream(adaptor,"rule vardef");
        RewriteRuleSubtreeStream stream_slist=new RewriteRuleSubtreeStream(adaptor,"rule slist");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:43:2: ( 'def' ID '(' ( vardef ( ',' vardef )* )? ')' slist ->)
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:43:4: 'def' ID '(' ( vardef ( ',' vardef )* )? ')' slist
            {
            string_literal11=(Token)match(input,DEF,FOLLOW_DEF_in_functionDefinition214);  
            stream_DEF.add(string_literal11);

            ID12=(Token)match(input,ID,FOLLOW_ID_in_functionDefinition216);  
            stream_ID.add(ID12);


                    FunctionSymbol fs = new FunctionSymbol((ID12!=null?ID12.getText():null),currentScope);
                    currentScope.define(fs); // def method in globals
                    currentScope = fs;       // set current scope to method scope
                    
            char_literal13=(Token)match(input,34,FOLLOW_34_in_functionDefinition231);  
            stream_34.add(char_literal13);

            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:49:13: ( vardef ( ',' vardef )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:49:14: vardef ( ',' vardef )*
                    {
                    pushFollow(FOLLOW_vardef_in_functionDefinition234);
                    vardef14=vardef();

                    state._fsp--;

                    stream_vardef.add(vardef14.getTree());
                    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:49:21: ( ',' vardef )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==32) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:49:22: ',' vardef
                    	    {
                    	    char_literal15=(Token)match(input,32,FOLLOW_32_in_functionDefinition237);  
                    	    stream_32.add(char_literal15);

                    	    pushFollow(FOLLOW_vardef_in_functionDefinition239);
                    	    vardef16=vardef();

                    	    state._fsp--;

                    	    stream_vardef.add(vardef16.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }

            char_literal17=(Token)match(input,35,FOLLOW_35_in_functionDefinition246);  
            stream_35.add(char_literal17);

            currentScope = new LocalScope(fs);
            pushFollow(FOLLOW_slist_in_functionDefinition254);
            slist18=slist();

            state._fsp--;

            stream_slist.add(slist18.getTree());

            		fs.blockAST = (slist18!=null?((PieAST)slist18.tree):null);
            		currentScope = currentScope.getEnclosingScope();
            		currentScope = currentScope.getEnclosingScope();
            		


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (PieAST)adaptor.nil();
            // 57:3: ->
            {
                root_0 = null;
            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (PieAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PieAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "functionDefinition"

    public static class slist_return extends ParserRuleReturnScope {
        PieAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "slist"
    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:60:1: slist : ( ':' NL ( statement )+ '.' NL -> ^( BLOCK ( statement )+ ) | statement -> ^( BLOCK statement ) );
    public final PieParser.slist_return slist() throws RecognitionException {
        PieParser.slist_return retval = new PieParser.slist_return();
        retval.start = input.LT(1);

        PieAST root_0 = null;

        Token char_literal19=null;
        Token NL20=null;
        Token char_literal22=null;
        Token NL23=null;
        PieParser.statement_return statement21 = null;

        PieParser.statement_return statement24 = null;


        PieAST char_literal19_tree=null;
        PieAST NL20_tree=null;
        PieAST char_literal22_tree=null;
        PieAST NL23_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_DOT=new RewriteRuleTokenStream(adaptor,"token DOT");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:61:2: ( ':' NL ( statement )+ '.' NL -> ^( BLOCK ( statement )+ ) | statement -> ^( BLOCK statement ) )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==36) ) {
                alt6=1;
            }
            else if ( (LA6_0==IF||(LA6_0>=PRINT && LA6_0<=RETURN)||LA6_0==STRUCT||(LA6_0>=ID && LA6_0<=NL)) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:61:4: ':' NL ( statement )+ '.' NL
                    {
                    char_literal19=(Token)match(input,36,FOLLOW_36_in_slist274);  
                    stream_36.add(char_literal19);

                    NL20=(Token)match(input,NL,FOLLOW_NL_in_slist276);  
                    stream_NL.add(NL20);

                    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:61:11: ( statement )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==IF||(LA5_0>=PRINT && LA5_0<=RETURN)||LA5_0==STRUCT||(LA5_0>=ID && LA5_0<=NL)) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:61:11: statement
                    	    {
                    	    pushFollow(FOLLOW_statement_in_slist278);
                    	    statement21=statement();

                    	    state._fsp--;

                    	    stream_statement.add(statement21.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);

                    char_literal22=(Token)match(input,DOT,FOLLOW_DOT_in_slist281);  
                    stream_DOT.add(char_literal22);

                    NL23=(Token)match(input,NL,FOLLOW_NL_in_slist283);  
                    stream_NL.add(NL23);



                    // AST REWRITE
                    // elements: statement
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PieAST)adaptor.nil();
                    // 61:29: -> ^( BLOCK ( statement )+ )
                    {
                        // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:61:32: ^( BLOCK ( statement )+ )
                        {
                        PieAST root_1 = (PieAST)adaptor.nil();
                        root_1 = (PieAST)adaptor.becomeRoot((PieAST)adaptor.create(BLOCK, "BLOCK"), root_1);

                        if ( !(stream_statement.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_statement.hasNext() ) {
                            adaptor.addChild(root_1, stream_statement.nextTree());

                        }
                        stream_statement.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:62:4: statement
                    {
                    pushFollow(FOLLOW_statement_in_slist297);
                    statement24=statement();

                    state._fsp--;

                    stream_statement.add(statement24.getTree());


                    // AST REWRITE
                    // elements: statement
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PieAST)adaptor.nil();
                    // 62:18: -> ^( BLOCK statement )
                    {
                        // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:62:21: ^( BLOCK statement )
                        {
                        PieAST root_1 = (PieAST)adaptor.nil();
                        root_1 = (PieAST)adaptor.becomeRoot((PieAST)adaptor.create(BLOCK, "BLOCK"), root_1);

                        adaptor.addChild(root_1, stream_statement.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (PieAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PieAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "slist"

    public static class statement_return extends ParserRuleReturnScope {
        PieAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:65:1: statement : ( structDefinition | qid '=' expr NL -> ^( '=' qid expr ) | 'return' expr NL -> ^( 'return' expr ) | 'print' expr NL -> ^( 'print' expr ) | 'if' expr c= slist ( 'else' el= slist )? -> ^( 'if' expr $c ( $el)? ) | 'while' expr slist -> ^( 'while' expr slist ) | call NL -> call | NL ->);
    public final PieParser.statement_return statement() throws RecognitionException {
        PieParser.statement_return retval = new PieParser.statement_return();
        retval.start = input.LT(1);

        PieAST root_0 = null;

        Token char_literal27=null;
        Token NL29=null;
        Token string_literal30=null;
        Token NL32=null;
        Token string_literal33=null;
        Token NL35=null;
        Token string_literal36=null;
        Token string_literal38=null;
        Token string_literal39=null;
        Token NL43=null;
        Token NL44=null;
        PieParser.slist_return c = null;

        PieParser.slist_return el = null;

        PieParser.structDefinition_return structDefinition25 = null;

        PieParser.qid_return qid26 = null;

        PieParser.expr_return expr28 = null;

        PieParser.expr_return expr31 = null;

        PieParser.expr_return expr34 = null;

        PieParser.expr_return expr37 = null;

        PieParser.expr_return expr40 = null;

        PieParser.slist_return slist41 = null;

        PieParser.call_return call42 = null;


        PieAST char_literal27_tree=null;
        PieAST NL29_tree=null;
        PieAST string_literal30_tree=null;
        PieAST NL32_tree=null;
        PieAST string_literal33_tree=null;
        PieAST NL35_tree=null;
        PieAST string_literal36_tree=null;
        PieAST string_literal38_tree=null;
        PieAST string_literal39_tree=null;
        PieAST NL43_tree=null;
        PieAST NL44_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_PRINT=new RewriteRuleTokenStream(adaptor,"token PRINT");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_RETURN=new RewriteRuleTokenStream(adaptor,"token RETURN");
        RewriteRuleTokenStream stream_WHILE=new RewriteRuleTokenStream(adaptor,"token WHILE");
        RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleSubtreeStream stream_qid=new RewriteRuleSubtreeStream(adaptor,"rule qid");
        RewriteRuleSubtreeStream stream_call=new RewriteRuleSubtreeStream(adaptor,"rule call");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_slist=new RewriteRuleSubtreeStream(adaptor,"rule slist");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:66:2: ( structDefinition | qid '=' expr NL -> ^( '=' qid expr ) | 'return' expr NL -> ^( 'return' expr ) | 'print' expr NL -> ^( 'print' expr ) | 'if' expr c= slist ( 'else' el= slist )? -> ^( 'if' expr $c ( $el)? ) | 'while' expr slist -> ^( 'while' expr slist ) | call NL -> call | NL ->)
            int alt8=8;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:66:4: structDefinition
                    {
                    root_0 = (PieAST)adaptor.nil();

                    pushFollow(FOLLOW_structDefinition_in_statement320);
                    structDefinition25=structDefinition();

                    state._fsp--;

                    adaptor.addChild(root_0, structDefinition25.getTree());

                    }
                    break;
                case 2 :
                    // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:67:4: qid '=' expr NL
                    {
                    pushFollow(FOLLOW_qid_in_statement325);
                    qid26=qid();

                    state._fsp--;

                    stream_qid.add(qid26.getTree());
                    char_literal27=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_statement327);  
                    stream_ASSIGN.add(char_literal27);

                    pushFollow(FOLLOW_expr_in_statement329);
                    expr28=expr();

                    state._fsp--;

                    stream_expr.add(expr28.getTree());
                    NL29=(Token)match(input,NL,FOLLOW_NL_in_statement331);  
                    stream_NL.add(NL29);



                    // AST REWRITE
                    // elements: ASSIGN, qid, expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PieAST)adaptor.nil();
                    // 67:23: -> ^( '=' qid expr )
                    {
                        // /Users/parrt/research/book/TPDSL/Book/code/interp/tree/Pie.g:67:26: ^( '=' qid expr )
                        {
                        PieAST root_1 = (PieAST)adaptor.nil();
                        root_1 = (PieAST)adaptor.becomeRoot(stream_ASSIGN.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_qid.nextTree());
                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }
